--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,7 @@ Live Production URL: http://sitr.link
 
 == Screen Shots of Live App
 
-The app requires the associated hardware to see it in action so I've provided some screenshots below
+The app requires the associated hardware to see it in action so I've provided a screencapture of it below
+
 
 http://joshcass.com/wp-content/uploads/2015/08/sitr.gif
